# isvd

./: CMakeLists.txt  LICENSE.md  README.md
check/: CMakeLists.txt  check.cmake  check.cxx  check_mpi.cxx
check/check/libisvd/core/stage/: @x@_integrate_hierarchical_reduction.cxx  @x@_integrate_kolmogorov_nagumo.cxx  @x@_integrate_multilevel_pairwise.cxx  @x@_integrate_wen_yin.cxx  @x@_orthogonalize_gramian.cxx  @x@_orthogonalize_tall_skinny_qr.cxx  @x@_postprocess_gramian.cxx  @x@_postprocess_gramian.hxx  @x@_postprocess_symmetric.cxx  @x@_postprocess_symmetric.hxx  @x@_postprocess_tall_skinny_qr.cxx  @x@_postprocess_tall_skinny_qr.hxx  @x@_sketch_gaussian_projection.cxx  @x@_sketch_gaussian_projection.hxx
check/check/libisvd/gpu/stage/: @x@_postprocess_gramian_gpu.cxx  @x@_postprocess_symmetric_gpu.cxx  @x@_postprocess_tall_skinny_qr_gpu.cxx  @x@_sketch_gaussian_projection_gpu.cxx
check/lib/: CMakeLists.txt
check/libisvd/core/isvd_d_integrate_kolmogorov_nagumo/: check.cxx  src.cxx
check/libisvd/core/isvd_d_integrate_wen_yin/: check.cxx  src.cxx
check/libisvd/core/isvd_d_orthogonalize_gramian/: check.cxx  src.cxx
check/libisvd/core/isvd_d_postprocess_gramian/: check.cxx  mmio.cxx  src.cxx
check/libisvd/core/isvd_d_postprocess_symmetric/: check.cxx  src.cxx
check/libisvd/core/isvd_d_sketch_gaussian_projection/: check.cxx  src.cxx
check/libisvd/core/stage/: @x@_integrate_hierarchical_reduction.cxx.in  @x@_integrate_kolmogorov_nagumo.cxx.in  @x@_orthogonalize_gramian.cxx.in  @x@_postprocess_gramian.cxx.in  @x@_sketch_gaussian_projection.cxx.in
check/libisvd/core/stage_d/: @x@_sketch_gaussian_projection.cxx.xin  d_integrate_wen_yin.cxx  d_orthogonalize_gramian.cxx  d_postprocess_gramian.cxx  d_postprocess_symmetric.cxx  d_sketch_gaussian_projection.cxx
check/src/: CMakeLists.txt
cmake/: cache.cmake  (+10 more)
demo/: CMakeLists.txt  cdemo.c  ctest.c  ftest.f90  test.c
doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in  example.dox  layout.xml  module.dox
doxygen/ext/: mkl.h  mpi.h  omp.h
doxygen/tutorial/: main.dox
doxygen/tutorial/core/: example.dox  notation.dox  stage.dox  storage.dox
ext/: CMakeLists.txt
ext/mmio/: mmio.cxx  mmio.h
include/: CMakeLists.txt  isvd.h
include/c/: isvd.h
include/c/isvd/: config.h  config.h.in  core.h  def.h  gpu.h  la.h  util.h
include/c/isvd/core/: @x@_driver.h  @x@_driver.h.in  @x@_stage.h  @x@_stage.h.in  def.h  driver_@x@.h.in  driver_d.h  dtype.h  env.h  idx_range.h  param.h  print_environment.h  stage_@x@.h.in  stage_@x@.h.xin  stage_d.h
include/c/isvd/gpu/: @x@_stage.h  env.h
include/c/isvd/la/: blas.h  blas1.h  blas2.h  blas3.h  blas_like.h  lapack.h  lapack_aux.h  lapack_le.h  lapack_ls.h  vml.h  vsl.h
include/c/isvd/util/: arg.h  function.h  io.h  memory.h  mpi.h  omp.h
include/fortran/: isvd.fi
include/fortran/isvd/: core.fi
include/isvd/: config.h.in  def.h
src/: CMakeLists.txt  libisvd.h
src/include/: CMakeLists.txt
src/include/c/: isvd.h
src/include/c/isvd/: config.h  core.h  def.h  gpu.h  la.h  util.h
src/isvd/core/: isvd_d_sketch_gaussian_projection.c  isvd_dsgp.c
src/lib/: CMakeLists.txt  libisvd.h
src/lib/libisvd/: core.h  def.h  gpu.h  la.h  util.h
src/lib/libisvd/core/: @x@_arg.h  env.c  param.c
src/lib/libisvd/gpu/: def.h  env.c
src/lib/libisvd/la/: def.h
src/lib/libisvd/nogpu/: @x@_stage.c  env.c
src/lib/libisvd/util/: arg.h  function.h  io.c  memory.c  mpi.c  omp.c
src/libisvd/: core.h  def.c  def.h  gpu.h  la.h  util.h
src/libisvd/core/: @x@_arg.h  env.c  isvd_d_integrate_kolmogorov_nagumo.c  isvd_d_orthogonalize_gramian.c  isvd_d_postprocess_gramian.c  isvd_d_sketch_gaussian_projection.c  param.c  print_environment.c
src/libisvd/core/driver/: @x@_ieig.c  @x@_ieig.c.in  @x@_isvd.c  @x@_isvd.c.in
src/libisvd/core/driver_d/: d_ieig.c  d_isvd.c  isvd_d_ieig.c  isvd_d_isvd.c
src/libisvd/core/stage/: @x@_integrate_hierarchical_reduction.c  @x@_integrate_hierarchical_reduction.c.in  @x@_integrate_kolmogorov_nagumo.c  @x@_integrate_kolmogorov_nagumo.c.in  @x@_integrate_wen_yin.c  @x@_integrate_wen_yin.c.in  @x@_orthogonalize_gramian.c  @x@_orthogonalize_gramian.c.in  @x@_orthogonalize_tall_skinny_qr.c  @x@_orthogonalize_tall_skinny_qr.c.in  @x@_postprocess.h  @x@_postprocess_gramian.c  @x@_postprocess_gramian.c.in  @x@_postprocess_symmetric.c  @x@_postprocess_symmetric.c.in  @x@_postprocess_tall_skinny_qr.c  @x@_postprocess_tall_skinny_qr.c.in  @x@_sketch.h  @x@_sketch_gaussian_projection.c  @x@_sketch_gaussian_projection.c.in
src/libisvd/core/stage_d/: @x@_sketch_gaussian_projection.c.xin  d_integrate_hierarchical_reduction.c  d_integrate_kolmogorov_nagumo.c  d_integrate_wen_yin.c  d_orthogonalize_gramian.c  d_orthogonalize_tall_skinny_qr.c  d_postprocess_gramian.c  d_postprocess_symmetric.c  d_postprocess_tall_skinny_qr.c  d_sketch_gaussian_projection.c  isvd_d_integrate_hierarchical_reduction.c  isvd_d_integrate_kolmogorov_nagumo.c  isvd_d_integrate_wen_yin.c  isvd_d_orthogonalize_gramian.c  isvd_d_orthogonalize_tall_skinny_qr.c  isvd_d_postprocess_gramian.c  isvd_d_postprocess_symmetric.c  isvd_d_postprocess_tall_skinny_qr.c  isvd_d_sketch_gaussian_projection.c
src/libisvd/gpu/: def.h  env.c
src/libisvd/gpu/stage/: @x@_postprocess_gpu.h  @x@_postprocess_gramian_gpu.c  @x@_postprocess_symmetric_gpu.c  @x@_postprocess_tall_skinny_qr_gpu.c  @x@_sketch_gaussian_projection_gpu.c  @x@_sketch_gpu.h
src/libisvd/la/: blas.h  def.h  lapack.h  vml.h  vsl.h
src/libisvd/la/blas/: blas1.h  blas2.h  blas3.h  dimm.c  dism.c  gemmt.c  gemmt.h  iamax.c  iamin.c  omatcopy.c  omatcopy.h
src/libisvd/la/lapack/: geinv.c  geinv.h  gesvd.c  gesvd.h  larnv.h  lsame.c  lsame.h  lsamen.c  syev.c  syev.h
src/libisvd/la/util/: memory.c  omp.c
src/libisvd/la/vml/: div.c  mul.c  sqrt.c  sub.c  vml.h
src/libisvd/la/vsl/: @x@_rng_gaussian_driver.c  rng_gaussian.c  rng_gaussian.h  service.c  vsl.c  vsl.h
src/libisvd/nogpu/: @x@_stage.c  env.c
src/libisvd/util/: arg.h  function.h  io.c  io.h  memory.c  memory.h  mpi.c  mpi.h  omp.c  omp.h
src/pyisvd/: setup.py
(+136 files in other folders)
